fix: bug wrapping long words on a new line

--- a/src/app/comment/comment.component.scss
+++ b/src/app/comment/comment.component.scss
@@ -3,7 +3,8 @@
     background-color: #fff;
     border-radius: 0.5rem;
     padding: .3rem .3rem 1.2rem;
-    margin-bottom: .3rem
+    margin-bottom: .3rem;
+    word-wrap: break-word;
   }
   &__footer {
     position: relative;
